--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <img src="assets/img/hero-img.jpg" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
-        <h2>I am Morgan Freeman</h2>
-        <p><span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p>
+        <h2>I am Ntuthuzelo Gwinta</h2>
+        <p><span class="typed" data-typed-items="Junior/Intermediate Developer, Software Engineering Candidate"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -105,8 +105,8 @@
                 <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
-                <p><strong>Name: </strong> <span>Morgan Freeman</span></p>
-                <p><strong>Profile: </strong> <span>full stack developer</span></p>
+                <p><strong>Name: </strong> <span>Ntuthuzelo Gwinta</span></p>
+                <p><strong>Profile: </strong> <span>Junior/Intermediate Developer, Software Engineering Candidate</span></p>
                 <p><strong>Email: </strong> <span>contact@example.com</span></p>
                 <p><strong>Phone: </strong> <span>(617) 557-0089</span></p>
               </div>
