--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      
-      <img src="assets/img/pic2.png" alt="" class="img-fluid">
+      <img src="assets/img/pic2.png" alt="" data-aos="fade-in" style="height: 1055px; width: 1920px;">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Ntuthuzelo Gwinta</h2>
