--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="assets/img/pic2.png" alt="" data-aos="fade-in" style="height: 1055px; width: 1920px;">
+      <img src="assets/img/pic3.png" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Ntuthuzelo Gwinta</h2>
@@ -102,7 +102,7 @@
 
             <div class="row justify-content-between gy-4">
               <div class="col-lg-5">
-                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                <img src="assets/img/gwinta.JPG" class="img-fluid" alt="">
               </div>
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Ntuthuzelo Gwinta</span></p>
