--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section">
 
-      <img src="assets/img/pic3.png" alt="" data-aos="fade-in">
+      <img src="assets/img/pic3.JPG" alt="" data-aos="fade-in">
 
       <div class="container d-flex flex-column align-items-center justify-content-center text-center" data-aos="fade-up" data-aos-delay="100">
         <h2>I am Ntuthuzelo Gwinta</h2>
