--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Ntuthuzelo Gwinta</span></p>
                 <p><strong>Profile: </strong> <span>Junior/Intermediate Developer, Software Engineering Candidate</span></p>
-                <p><strong>Email: </strong> <span>contact@example.com</span></p>
-                <p><strong>Phone: </strong> <span>(617) 557-0089</span></p>
+                <p><strong>Email: </strong> <span>gwintantuthuzelo@gmail.com</span></p>
+                <p><strong>Phone: </strong> <span>+27(0) 833 231-7388</span></p>
               </div>
 
             </div>
