--- a/index.html
+++ b/index.html
@@ -152,20 +152,19 @@
             <div class="about-me">
               <h4>About me</h4>
               <p>
-                Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                imperdiet et, porttitor
-                at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                porttitor accumsan tincidunt.
+                I graduated from Walter Sisulu University with a National Diploma in Information Technology in 2021, 
+                where I learned various programming languages and technologies, 
+                such as Java, VB.net, C#, Asp .Net Core, Angular, HTML, CSS, SQL, SQL Server, MySQL, and SQLite. 
+                I also volunteered as a student at Enactus, a global organization that fosters social entrepreneurship and innovation, 
+                where I applied the System Development Life Cycle Methodology, Design Thinking Process, 
+                and Business Model Canvas to create and implement solutions for social and environmental challenges. 
+                I am passionate about using my skills and knowledge to create impactful and user-friendly solutions that address real-world problems and needs.
               </p>
               <p>
-                Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                porttitor volutpat. Vestibulum
-                ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
-              </p>
-              <p>
-                Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                Nulla porttitor accumsan
-                tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                As a Junior Software Developer at Ayamah Tibaa, a company that provides IT support services and solutions, 
+                I have gained valuable experience in developing mobile applications, business process automation, desktop applications, 
+                and websites. I have also acquired multiple Nintex certifications, including K2 Power User, K2 Business Analyst, 
+                and K2 IT Developer, which demonstrate my proficiency in using the Nintex platform for workflow and process automation.
               </p>
             </div>
           </div>
