--- a/index.html
+++ b/index.html
@@ -191,27 +191,30 @@
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Ntuthuzelo Gwinta</h4>
+              <p><em>A dedicated and passionate professional with a proven track record as a team player, I am goal-oriented, innovative, and excel in problem-solving. 
+                My strong communication skills allow me to convey complex information clearly, and I am committed to continuous learning and personal development. 
+                With a keen analytical mind and an optimistic outlook, I bring a positive attitude to all tasks, driving projects to successful completion through strategic planning and collaboration.
+                Additionally, I am deadline-driven, consistently delivering high-quality work within established timeframes.</em></p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>+27(0) 833 231-7388</li>
+                <li>gwintantuthuzelo@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>Advanced Diploma in ICT Application Development</h4>
+              <h5>2024 - In Progress</h5>
+              <p><em>Walter Sisulu University, East London, Eastern Cape</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>National Diploma in Information Technology</h4>
+              <h5>2018 - 2021 (Complete)</h5>
+              <p><em>Walter Sisulu University, East London, Eastern Cape</em></p>
               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
             </div><!-- Edn Resume Item -->
 
