--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p><strong>Name: </strong> <span>Ntuthuzelo Gwinta</span></p>
                 <p><strong>Profile: </strong> <span>Junior/Intermediate Developer, Software Engineering Candidate</span></p>
                 <p><strong>Email: </strong> <span>gwintantuthuzelo@gmail.com</span></p>
-                <p><strong>Phone: </strong> <span>+27(0) 833 231-7388</span></p>
+                <p><strong>Phone: </strong> <span>+27(0) 83 231-7388</span></p>
               </div>
 
             </div>
@@ -197,8 +197,8 @@
                 With a keen analytical mind and an optimistic outlook, I bring a positive attitude to all tasks, driving projects to successful completion through strategic planning and collaboration.
                 Additionally, I am deadline-driven, consistently delivering high-quality work within established timeframes.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>+27(0) 833 231-7388</li>
+                <li>10 Begonia Street, Braelyn Heights, East London, 5201, Eastern Cape, South Africa </li>
+                <li>+27(0) 83 231-7388</li>
                 <li>gwintantuthuzelo@gmail.com</li>
               </ul>
             </div><!-- Edn Resume Item -->
@@ -208,14 +208,23 @@
               <h4>Advanced Diploma in ICT Application Development</h4>
               <h5>2024 - In Progress</h5>
               <p><em>Walter Sisulu University, East London, Eastern Cape</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>As a current Software Engineering candidate pursuing an Advanced Diploma in Information and Communication Technology specializing in Applications Development, 
+                I am developing advanced skills in programming languages such as Java, Python, C#, and JavaScript, as well as software development methodologies like Agile and DevOps. 
+                I am gaining proficiency in version control systems (Git), database management (SQL and NoSQL), web development (HTML, CSS, React, Angular), and mobile app development. 
+                Additionally, I am becoming adept at software testing, debugging, CI/CD pipelines, software architecture, design patterns, and project management, 
+                enabling me to efficiently develop and maintain high-quality software applications.</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
               <h4>National Diploma in Information Technology</h4>
               <h5>2018 - 2021 (Complete)</h5>
               <p><em>Walter Sisulu University, East London, Eastern Cape</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p>
+                I am equipped with a robust set of skills. I am proficient in programming languages such as Java, Python, C#, and JavaScript, 
+                and I have expertise in software development methodologies like Agile and Scrum. 
+                My experience includes working with version control systems like Git and managing databases using SQL and NoSQL. I am skilled in web development, utilizing HTML, CSS, 
+                frameworks like Angular, and mobile app development. Additionally, I possess strong abilities in software testing and debugging, project management, 
+                and applying software engineering principles. These skills enable me to design, develop, and maintain various software applications effectively.</p>
             </div><!-- Edn Resume Item -->
 
           </div>
@@ -223,26 +232,31 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h3>Junior/Intermediate Software Developer</h3>
+              <h4>Junior/Intermediate Software Developer</h4>
+              <h5>2022 - Present</h5>
+              <p><em>Berea, East London, Eastern Cape, South Africa</em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Development of applications according to User Requirements Documentation </li>
+                <li>Business Process analysis </li>
+                <li>Architectural design and system design of systems and applications</li>
+                <li>Technical documentation of the applications and systems designed</li>
+                <li>Integration of systems and applications </li>
+                <li>Software development responsibilities to support DPWI objectives </li>
+                <li>Software support responsibilities and weekly reporting</li>
+                <li>Support in any other work-related responsibilities that may be assigned </li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h3>Walter Sisulu University (Department of Learning and Teaching) </h3>
+              <h4>Peer Assistant Learner Leader</h4>
+              <h5>Feb 2021 - Nov 2021</h5>
+              <p><em>Berea, East London, Eastern Cape, South Africa</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Tutoring FTEN Students</li>
+                <li>Supported students with helpful study habits and exam strategies</li>
+                <li>Planned extended projects to increase students' understanding of specific concepts</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
