--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
                   <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
-              
+
+            </div><div class="skills-content skills-animation">
+
               <div class="progress">
                 <span class="skill"><span>C#</span> <i class="val">90%</i></span>
                 <div class="progress-bar-wrap">
