--- a/index.html
+++ b/index.html
@@ -155,13 +155,6 @@
               </div><!-- End Skills Item -->
 
               <div class="progress">
-                <span class="skill"><span>ASP .NET Core</span> <i class="val">83%</i></span>
-                <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
-              </div><!-- End Skills Item -->
-
-              <div class="progress">
                 <span class="skill"><span>Python</span> <i class="val">80%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
@@ -169,9 +162,9 @@
               </div><!-- End Skills Item -->
 
               <div class="progress">
-                <span class="skill"><span>Angular (TypeScript)</span> <i class="val">70%</i></span>
+                <span class="skill"><span>ASP .NET Core and Angular (TypeScript)</span> <i class="val">79%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="79" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
@@ -179,6 +172,13 @@
                 <span class="skill"><span>Flutter (Dart)</span> <i class="val">50%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div><!-- End Skills Item -->
+
+              <div class="progress">
+                <span class="skill"><span>SQL, SQL SERVER, SQLite, MySQL</span> <i class="val">83%</i></span>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="83" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
               </div><!-- End Skills Item -->
 
