--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Let us examine the skills, knowledge, and experience I have acquired or am in the process of acquiring. </p>
       </div><!-- End Section Title -->
 
       <div class="container">
