--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -121,7 +121,7 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/app-1.jpg" alt="">
+              <img src="assets/img/portfolio/ola1.png" alt="">
             </div>
 
             <div class="swiper-slide">
