--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">Umzi WakwaXhosa</li>
             <li data-filter=".filter-product">Masifundeni</li>
-            <li data-filter=".filter-branding">Branding</li>
+            <li data-filter=".filter-branding">Leave Management System</li>
             <li data-filter=".filter-books">Books</li>
           </ul><!-- End Portfolio Filters -->
 
@@ -485,6 +485,19 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/portfolio/leave1.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Leave Management 1</h4>
+                <p>Persornal Information of User / User Profile</p>
+                <a href="assets/img/portfolio/leave1.png" title="Branding 1"
+                  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
+                    class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                    class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/portfolio/ola2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -505,6 +518,19 @@
               </div>
             </div><!-- End Portfolio Item -->
 
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/portfolio/leave2.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Leave Management 2</h4>
+                <p>Leave Request Form</p>
+                <a href="assets/img/portfolio/leave2.png" title="Branding 2"
+                  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
+                    class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                    class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <img src="assets/img/portfolio/ola3.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -522,6 +548,19 @@
                 <p>About the main menu of the application</p>
                 <a href="assets/img/portfolio/masifunde3.png" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/portfolio/leave3.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Leave Management 3</h4>
+                <p>About the History of Leave Applications</p>
+                <a href="assets/img/portfolio/leave3.png" title="Branding 2"
+                  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
+                    class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                    class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
