--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -125,7 +125,11 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/masifunde.png" alt="">
+              <img src="assets/img/portfolio/masifunde1.png" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/portfolio/leave1.png" alt="">
             </div>
 
           </div>
