--- a/about.html
+++ b/about.html
@@ -62,6 +62,137 @@
   </header>
 
   <main class="main">
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio section">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>About Community Based and Entrepreneurship Involvement Gallery</h2>
+        <p>The gallery seeks to provide you with a glimpse of the screens in the projects that are currently being built.</p>
+      </div><!-- End Section Title -->
+
+      <div class="container">
+
+        <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
+
+          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+            <li data-filter="*" class="filter-active">All</li>
+            <li data-filter=".filter-app">Development</li>
+            <li data-filter=".filter-product">Entrepreneurship Workshops</li>
+            <li data-filter=".filter-branding">Commmunity Envolvement</li>
+          </ul><!-- End Portfolio Filters -->
+
+          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <img src="assets/img/dev1.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Graduation Moments</h4>
+                <p>Celebrating the victory</p>
+                <a href="assets/img/dev1.JPG" title="App 1" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <img src="assets/img/entre1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Institutional Executive Training</h4>
+                <p>Engaging with like minded students to bring change in communities.</p>
+                <a href="assets/img/entre1.jpg" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/comm1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Hosting Community Tournaments</h4>
+                <p>Giving back to the community.</p>
+                <a href="assets/img/comm1.jpg" title="Branding 1"
+                  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
+                    class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                    class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <img src="assets/img/dev2.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Masifunde</h4>
+                <p>About the main menu of the application</p>
+                <a href="assets/img/dev2.JPG" title="App 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <img src="assets/img/entre2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Skills Development</h4>
+                <p>About the books profile</p>
+                <a href="assets/img/entre2.jpg" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/comm2.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Under 17 Tournament Hosting</h4>
+                <p>Leave Request Form</p>
+                <a href="assets/img/comm2.jpg" title="Branding 2"
+                  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
+                    class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                    class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <img src="assets/img/portfolio/dev3.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Growth</h4>
+                <p>Sample Quiz of Amaqhalo</p>
+                <a href="assets/img/portfolio/dev3.JPG" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
+              <img src="assets/img/entre3.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Leadership</h4>
+                <p>About the main menu of the application</p>
+                <a href="assets/img/entre3.JPG" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
+              <img src="assets/img/student3.JPG" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Student EDHE Competition</h4>
+                <p>Skills showcasing</p>
+                <a href="assets/img/portfolio/student3.JPG" title="Branding 2"
+                  data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
+                    class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i
+                    class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+          </div><!-- End Portfolio Container -->
+
+        </div>
+
+      </div>
+
+    </section><!-- /Portfolio Section -->
+
+
+
     <!-- Resume Section -->
     <section id="resume" class="resume section">
 
