--- a/services.html
+++ b/services.html
@@ -51,8 +51,8 @@
         <ul>
           <li><a href="index.html" >Home<br></a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="Project.html">Project Gallery</a></li>
-          <li><a href="services.html" class="active">Services</a></li>
+          <li><a href="Project.html">Gallery</a></li>
+          <li><a href="services.html" class="active">Project Gallery</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
