--- a/about.html
+++ b/about.html
@@ -62,6 +62,58 @@
   </header>
 
   <main class="main">
+    <!-- ======= Alt Services Section ======= -->
+    <section id="alt-services" class="alt-services">
+      <div class="container" data-aos="fade-up">
+
+        <div class="row justify-content-around gy-4">
+          <div class="col-lg-6 img-bg" style="background-image: url(assets/img/gwinta.JPG);" data-aos="zoom-in" data-aos-delay="100"></div>
+
+          <div class="col-lg-5 d-flex flex-column justify-content-center">
+            <h3>About Ntuthuzelo Gwinta</h3>
+            <p>Passionate, hardworking, innovator and self-disciplined individual young star who believes in seeing opportunity in every challenge they encounter. Currently employed as a Junior Software Developer Intern at Ayamah Tibaa (Pty) Ltd.</p>
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
+              <i class="bi bi-easel flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Name, Surname and Title</a></h4>
+                <p>Ntuthuzelo Gwinta (Mr)</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="200">
+              <i class="bi bi-patch-check flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Field of Expertise</a></h4>
+                <p>Information Technologist specialising in Software Development, and Entrepreneurship</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="300">
+              <i class="bi bi-brightness-high flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Educational Achievements</a></h4>
+                <p>Walter Sisulu University - National Diploma in Information Technology (Completed) <br> Nelson Mandela University - Advanced Diploma in Information and Communication Technology in Applications Developments (In Progress...)</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+            <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
+              <i class="bi bi-brightness-high flex-shrink-0"></i>
+              <div>
+                <h4><a href="" class="stretched-link">Other Involvements</a></h4>
+                <p>Motsoaledi United FC - Volunteering</p>
+                <p>Enactus Walter Sisulu University Alumnus - Volunteering</p>
+              </div>
+            </div><!-- End Icon Box -->
+
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Alt Services Section -->
+
+
+
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
 
