--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
               <i class="bi bi-brightness-high flex-shrink-0"></i>
               <div>
                 <h4><a href="" class="stretched-link">Educational Achievements</a></h4>
-                <p>Walter Sisulu University - National Diploma in Information Technology (Completed) <br> Nelson Mandela University - Advanced Diploma in Information and Communication Technology in Applications Developments (In Progress...)</p>
+                <p>Walter Sisulu University - National Diploma in Information Technology (Completed) <br> Walter Sisulu University - Advanced Diploma in Information and Communication Technology in Applications Developments (In Progress...)</p>
               </div>
             </div><!-- End Icon Box -->
 
